RESOLVED FIXED285761
[Modern Media Controls] Seeking or scubbing does not always seek to time requested
https://bugs.webkit.org/show_bug.cgi?id=285761
Summary [Modern Media Controls] Seeking or scubbing does not always seek to time requ...
Eric Carlson
Reported 2025-01-10 11:07:53 PST
The modern media controls only calls `fastSeek` when scrubbing or seeking, which means it may seek to the nearest key frame. This is especially problematic when seeking backwards in a video file with only one keyframe, where every reverse seek ends up at time zero.
Attachments
Eric Carlson
Comment 1 2025-01-10 11:08:01 PST
Eric Carlson
Comment 2 2025-01-10 11:12:34 PST
EWS
Comment 3 2025-02-04 16:30:33 PST
Committed 289836@main (cc6d32298158): <https://commits.webkit.org/289836@main> Reviewed commits have been landed. Closing PR #38856 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.