[Modern Media Controls] Seeking or scubbing does not always seek to time requested https://bugs.webkit.org/show_bug.cgi?id=285761 rdar://142275903

Reviewed by Jer Noble.

If a seek doesn't end up at the target time, explicitly set `currentTime` after
seeking/scrubbing completes. The new test fails on macOS and iOS because of rdar://143398895,
so skip it for now. The test fails on gtk and wpe because of webkit.org/b/286930, so skip
it there as well.

* LayoutTests/media/content/test-video-only-one-keyframe.mp4: Added.
* LayoutTests/media/modern-media-controls/scrubber-support/scrubber-support-seek-back-expected.txt: Added.
* LayoutTests/media/modern-media-controls/scrubber-support/scrubber-support-seek-back.html: Added.
* LayoutTests/platform/gtk/TestExpectations: Skip the new test for now.
* LayoutTests/platform/ios/TestExpectations: Ditto.
* LayoutTests/platform/mac/TestExpectations: Ditto.
* LayoutTests/platform/wpe/TestExpectations: Ditto.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::firstFrameAvailableDidChange): Drive-by:
enhance the logging.

* Source/WebCore/Modules/modern-media-controls/media/scrubbing-support.js:
(ScrubbingSupport.prototype.controlValueDidChange): Remember the seek target time.
(ScrubbingSupport.prototype.controlValueDidStopChanging): Set `currentTime` if necessary.

Canonical link: https://commits.webkit.org/289836@main